css development and adding dark mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="text-container">
       <h1>2048</h1>
       <p>Play 2048 Game Online <br> Join the numbers and get to the 2048 tile!</p>
+      <button id="mode-toggle">Dark mode</button>
     </div>
     <div id="screen-container">
       <div id="score-container">
